fixed overflow problem

--- a/source/style.css
+++ b/source/style.css
@@ -40,6 +40,7 @@
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 7% auto;
     grid-gap: 10px;
+    overflow-y: hidden;
 }
 
 .middle-item-bar {
@@ -89,6 +90,7 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
     border-top: 1px solid black;
+    overflow-y: hidden;
 }
 
 #log-tasks-area {
@@ -291,8 +293,7 @@ body {
 
 /* custom element in the middle section stylizing */
 
-event-log,
-task-log {
+event-log, task-log {
     display: flex;
     height: 25%;
     width: 100%;
@@ -300,9 +301,13 @@ task-log {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    
 }
 
-
+event-log:hover, task-log:hover {
+    background-color: rgb(157, 207, 223);
+    overflow: hidden;
+}
 /*
     Experimental Sidebar Styling
 */
